--- a/TravelApp/DesktopHost/View/ClientStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/ClientStayEatView.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="TravelApp.DesktopHost.View.TableView"
+﻿<UserControl x:Class="TravelApp.DesktopHost.View.ClientStayEatView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
         xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
-        d:DataContext="{d:DesignInstance Type=viewmodels:TableViewModel}"
+        d:DataContext="{d:DesignInstance Type=viewmodels:StayEatViewModel}"
         mc:Ignorable="d" 
         Background="White"
         SizeChanged="Window_SizeChanged">
