--- a/TravelApp/DesktopHost/View/ClientStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/ClientStayEatView.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
         xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
-        d:DataContext="{d:DesignInstance Type=viewmodels:StayEatViewModel}"
+        d:DataContext="{d:DesignInstance Type=viewmodels:ClientStayEatViewModel}"
         mc:Ignorable="d" 
         Background="White"
         SizeChanged="Window_SizeChanged">
