--- a/TravelApp/DesktopHost/View/Navigation/ClientNavigationView.xaml
+++ b/TravelApp/DesktopHost/View/Navigation/ClientNavigationView.xaml
@@ -37,7 +37,8 @@
                         BorderBrush="Transparent"
                         Foreground="#000000"
                         FontSize="{ Binding Navigation.TextFontSize }"
-                        FontWeight="Bold"/>
+                        FontWeight="Bold"
+                        Command="{ Binding Navigation.Trips }"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
@@ -55,8 +56,9 @@
                         Background="Transparent"
                         BorderBrush="Transparent"
                         Foreground="#000000"
-                        FontSize="{Binding Navigation.TextFontSize}"
-                        FontWeight="Bold"/>
+                        FontSize="{ Binding Navigation.TextFontSize }"
+                        FontWeight="Bold"
+                        Command="{ Binding Navigation.Attractions }"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
@@ -75,8 +77,9 @@
                         Background="Transparent"
                         BorderBrush="Transparent"
                         Foreground="#000000"
-                        FontSize="{Binding Navigation.TextFontSize}"
-                        FontWeight="Bold"/>
+                        FontSize="{ Binding Navigation.TextFontSize }"
+                        FontWeight="Bold"
+                        Command="{ Binding Navigation.StayAndEat }"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
@@ -95,8 +98,9 @@
                         Background="Transparent"
                         BorderBrush="Transparent"
                         Foreground="#000000"
-                        FontSize="{Binding Navigation.TextFontSize}"
-                        FontWeight="Bold"/>
+                        FontSize="{ Binding Navigation.TextFontSize }"
+                        FontWeight="Bold"
+                        Command="{ Binding Navigation.Trips }"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
@@ -115,8 +119,9 @@
                         Background="Transparent"
                         BorderBrush="Transparent"
                         Foreground="#000000"
-                        FontSize="{Binding Navigation.TextFontSize}"
-                        FontWeight="Bold"/>
+                        FontSize="{ Binding Navigation.TextFontSize }"
+                        FontWeight="Bold"
+                        Command="{ Binding Navigation.Reservations }"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
@@ -136,8 +141,9 @@
                         Background="Transparent"
                         BorderBrush="Transparent"
                         Foreground="#000000"
-                        FontSize="{Binding Navigation.TextFontSize}"
-                        FontWeight="Bold"/>
+                        FontSize="{ Binding Navigation.TextFontSize }"
+                        FontWeight="Bold"
+                        Command="{ Binding Navigation.Help }"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
@@ -157,9 +163,9 @@
                         Background="Transparent"
                         BorderBrush="Transparent"
                         Foreground="#000000"
-                        FontSize="{Binding Navigation.TextFontSize}"
+                        FontSize="{ Binding Navigation.TextFontSize }"
                         FontWeight="Bold"
-                        Command="{Binding Navigation.LogOut}"/>
+                        Command="{ Binding Navigation.LogOut }"/>
                 </StackPanel>
             </TabItem.Header>
         </TabItem>
