--- a/TravelApp/DesktopHost/View/SignupView.xaml
+++ b/TravelApp/DesktopHost/View/SignupView.xaml
@@ -64,14 +64,16 @@
                      Background="#A5FFFFFF"
                      materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
                      ToolTip="Enter your first name"
-                     Text="{Binding Name}">
+                     Text="{Binding Name}"
+                     PreviewTextInput="TextBox_PreviewTextInputName"
+                     LostFocus="TextBox_NameLostFocus">
                 </TextBox>
                 <Label Height="27"
                        FontSize="15"
                        FontFamily="Poppins"
                        FontWeight="Regular"
                        HorizontalAlignment="Left"
-                       Content="{Binding NameValidation}"
+                       Content="{Binding ValidationViewModel.NameValidation}"
                        Foreground="Red"/>
             </StackPanel>
             <StackPanel Grid.Row="3"
@@ -91,14 +93,16 @@
                      Background="#A5FFFFFF"
                      materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
                      ToolTip="Enter your last name"
-                     Text="{Binding Surname}">
+                     Text="{Binding Surname}"
+                     PreviewTextInput="TextBox_PreviewTextInputSurname"
+                     LostFocus="TextBox_SurnameLostFocus">
                 </TextBox>
                 <Label Height="27"
                        FontSize="15"
                        FontFamily="Poppins"
                        FontWeight="Regular"
                        HorizontalAlignment="Left"
-                       Content="{Binding SurnameValidation}"
+                       Content="{Binding ValidationViewModel.SurnameValidation}"
                        Foreground="Red"/>
             </StackPanel>
             <StackPanel Grid.Row="4"
@@ -120,14 +124,15 @@
                      materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
                      ToolTip="Enter email address associated with your account"
                      Text="{Binding Email}"
-                     PreviewTextInput="TextBox_PreviewTextInputEmail">
+                     PreviewTextInput="TextBox_PreviewTextInputEmail"
+                     LostFocus="TextBox_EmailLostFocus">
                 </TextBox>
                 <TextBlock Height="27"
                        FontSize="15"
                        FontFamily="Poppins"
                        FontWeight="Regular"
                        HorizontalAlignment="Left"
-                       Text="{Binding EmailValidation}"
+                       Text="{Binding ValidationViewModel.EmailValidation}"
                        Foreground="Red"/>
             </StackPanel>
             <StackPanel Grid.Row="5"
@@ -141,13 +146,15 @@
                    FontWeight="Regular"
                    HorizontalAlignment="Left">Password</Label>
                 <views:BindablePasswordBox 
-                 Password="{Binding Password}"/>
+                 ToolTip="Enter password for your new account"
+                 Password="{Binding Password}"
+                 LostFocus="TextBox_PasswordLostFocus"/>
                 <Label Height="27"
                        FontSize="15"
                        FontFamily="Poppins"
                        FontWeight="Regular"
                        HorizontalAlignment="Left"
-                       Content="{Binding PasswordValidation}"
+                       Content="{Binding ValidationViewModel.PasswordValidation}"
                         Foreground="Red"/> 
             </StackPanel>
             <StackPanel Grid.Row="6"
@@ -161,13 +168,15 @@
                    FontWeight="Regular"
                    HorizontalAlignment="Left">Password again</Label>
                 <views:BindablePasswordBox 
-                 Password="{Binding PasswordAgain}"/>
+                 Password="{Binding PasswordAgain}"
+                 ToolTip="Repeat your password"
+                 LostFocus="TextBox_PasswordAgainLostFocus"/>
                 <Label Height="27"
                        FontSize="15"
                        FontFamily="Poppins"
                        FontWeight="Regular"
                        HorizontalAlignment="Left"
-                       Content="{Binding PasswordAgainValidation}"
+                       Content="{Binding ValidationViewModel.PasswordAgainValidation}"
                        Foreground="Red"/>
             </StackPanel>
 
