Added placeholder and max length for search

--- a/TravelApp/DesktopHost/View/AgentStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/AgentStayEatView.xaml
@@ -9,6 +9,12 @@
              mc:Ignorable="d" 
              Background="White"
              SizeChanged="Window_SizeChanged">
+    
+    <UserControl.Resources>
+        <Style x:Key="PlaceholderTextBlockStyle" TargetType="TextBox">
+            <Setter Property="Foreground" Value="Gray"/>
+        </Style>
+    </UserControl.Resources>
 
     <Grid HorizontalAlignment="Center">
         <Grid>
@@ -43,7 +49,6 @@
                         </StackPanel>
                     </Button>
 
-                    <TextBlock Text="Search:" FontFamily="Poppins" VerticalAlignment="Center"  FontSize="14" Margin="0 0 5 0"/>
                     <Border Width="200" Height="30" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -51,7 +56,21 @@
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
                             <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="5" />
-                            <TextBox Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" FontFamily="Poppins" Grid.Column="1" Background="Transparent" BorderThickness="0" Padding="5" VerticalContentAlignment="Center" FontSize="14" Foreground="Black" />
+                            <Grid Grid.Column="1">
+                                <TextBox x:Name="myTextBox" Style="{StaticResource PlaceholderTextBlockStyle}"  Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" FontFamily="Poppins" MaxLength="15" Background="Transparent" BorderThickness="0" Padding="5" VerticalContentAlignment="Center" FontSize="14" Foreground="Black" />
+                                <TextBlock Text="Search..." FontSize="14" FontFamily="Poppins" Foreground="Gray" VerticalAlignment="Center" Panel.ZIndex="1">
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Visibility" Value="Collapsed" />
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding Text, ElementName=myTextBox}" Value="">
+                                                    <Setter Property="Visibility" Value="Visible" />
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
+                            </Grid>
                         </Grid>
                     </Border>
                 </WrapPanel>
@@ -153,4 +172,7 @@
 
         </Grid>
     </Grid>
+
+    
+
 </UserControl>
